<resources>
    <string name="app_name">영화 온</string>
    <string name="name_title_movie_was">베스트 영화 온</string>
    <string name="this_click_me_extensions">클릭하면 원하는 기능을 \n 바로 보실 수 있어요!!</string>
    <string name="your_choice_categories">아래의 카테고리 중 선택하세요</string>
    <string name="movie_name_best_rank">영화 순위</string>
    <string name="movie_rank">영화 순위</string>
    <string name="movie_select">영화 조회</string>
    <string name="movie_location">영화 위치</string>
    <string name="movie_remake_menu">영화 리뉴얼 메뉴</string>
    <string name="food_menu_top">음식 메뉴 추천</string>
    <string name="rank_menu_top">일일 영화 순위</string>
    <string name="customer_list_top">영화 목록 만들기</string>
    <string name="click_me">클릭하세요!</string>
    <string name="day_movie_rank_talk">일일 영화 순위를 알려드립니다</string>
    <string name="email_input">주소 입력창입니다.</string>
    <string name="email_textview_input">주소를 입력해주세요</string>
    <string name="movie_name_input">영화 이름 입력</string>
    <string name="plz_movie_name_input">영화 이름을 입력해주세요!!</string>
    <string name="movie_name">영화 이름 입력</string>
    <string name="movie_count">영화 갯수</string>
    <string name="logout">로그아웃</string>

    <string-array name="spinner_array">
        <item>재밌음</item>
        <item>즐거움</item>
        <item>화났음</item>
        <item>슬픔</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>