<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dialog_categories_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/your_choice_categories"
                android:textSize="24sp"
                android:fontFamily="@font/tenda_font"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="350dp"
                android:layout_height="170dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialog_categories_choice">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_movie_rank"
                    android:layout_width="105dp"
                    android:layout_height="105dp"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/color_gray_100"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/iv_movie_rank"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="4dp"
                            android:contentDescription="@string/this_click_me_extensions"
                            android:src="@drawable/dialog_movie_rank"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:id="@+id/tv_categories_choice_item1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="@font/welcome_font"
                            android:text="@string/movie_rank"
                            android:textSize="22sp"
                            app:layout_constraintEnd_toEndOf="@+id/iv_movie_rank"
                            app:layout_constraintStart_toStartOf="@+id/iv_movie_rank"
                            app:layout_constraintTop_toBottomOf="@+id/iv_movie_rank" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_movie_select"
                    android:layout_width="105dp"
                    android:layout_height="105dp"
                    android:backgroundTint="@color/color_gray_100"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/cv_movie_location"
                    app:layout_constraintStart_toEndOf="@+id/cv_movie_rank"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/iv_movie_watching"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="8dp"
                            android:contentDescription="@string/this_click_me_extensions"
                            android:src="@drawable/dialog_movie_select"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:id="@+id/tv_categories_choice_item2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="@font/welcome_font"
                            android:text="@string/movie_select"
                            android:textSize="22sp"
                            app:layout_constraintEnd_toEndOf="@+id/iv_movie_watching"
                            app:layout_constraintStart_toStartOf="@+id/iv_movie_watching"
                            app:layout_constraintTop_toBottomOf="@+id/iv_movie_watching" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_movie_location"
                    android:layout_width="105dp"
                    android:layout_height="105dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/color_gray_100"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/iv_watching_foretell"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="8dp"
                            android:contentDescription="@string/this_click_me_extensions"
                            android:src="@drawable/dialog_movie_location"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:id="@+id/tv_categories_choice_item3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="@font/welcome_font"
                            android:text="@string/movie_location"
                            android:textSize="22sp"
                            app:layout_constraintEnd_toEndOf="@+id/iv_watching_foretell"
                            app:layout_constraintStart_toStartOf="@+id/iv_watching_foretell"
                            app:layout_constraintTop_toBottomOf="@+id/iv_watching_foretell" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>